--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,6 +11,11 @@
 
   <%if user_signed_in?%>
   <li class="nav-item">
+    <%=link_to "Create Activity", new_activity_path, class: "nav-link"%>
+  </li>
+
+
+  <li class="nav-item">
     <%=link_to "Log Out", destroy_user_session_path, method: :delete, class: "nav-link"%>
   </li>
 <%else%>
