--- a/app/views/activities/_form.html.erb
+++ b/app/views/activities/_form.html.erb
@@ -15,7 +15,10 @@
     <%=f.select :category_id, @categories.map {|c| [c.name, c.id]}, class: "form-select"%>
   </div>
     
-
+    <div class='form-group mb-3'> 
+      <%=f.label :picture, class: "form-label"%>
+      <%=f.file_field :picture, accept: "image/png,image/jpg,image/jpeg", class: "form-select"%>
+   </div>
 
   
      <div class='form-group mb-3'> 
