--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -4,6 +4,16 @@
   </div>
 
   <ul class="navbar-nav mr-5-lg">
+
+  <li class="nav-item">
+  <%=link_to "My Activities", myactivities_path, class: "nav-link"%>
+</li>
+
+
+  <li class="nav-item">
+  <%=link_to "MyKid Activities", activities_path, class: "nav-link"%>
+</li>
+
   
   <li class="nav-item">
   <%=link_to "All Activities", activities_path, class: "nav-link"%>
