--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -21,8 +21,27 @@
           <div class='d-flex justify-content-equally'>
             <%= link_to "Edit", edit_activity_path(@activity.id), class: "btn btn-warning mr-2" %>
             <%= link_to "Delete", @listing, method: :delete, data: {confirm: "Are you sure?"}, class: "btn btn-danger" %>
-          </div>
+
+          </div> 
+         
       <%end%>
+
+    <%= link_to "Book", bookings_path, class: "btn btn-primary mt-2 mb-4" %>
+
+    <%if current_user && current_user.id == @activity.user_id%>
+
+    <h3 class='mb-sm-2 mb-md-3'>Registered Players</h3>
+
+    <%@registrations.each do |registration|%>
+      <%if @activity.id == registration.activity_id%>
+
+        <h5 class='text-muted'><%=registration.name%></h5>
+
+      <%end%>
+    <%end%>
+
+    <%end%>
+     
 
     </div>
     
