minor changes to view files

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -9,4 +9,7 @@
     width: 100%;
     background-image: url(image-path('main-background.jpg'));
     background-size: cover;
+    text-align: center;
   }
+
+  
