--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,3 @@
 <div class="main-background">
-  <h1> Welcome to MyKidActivity </h1>
+  <h1 style="color:blue"> Welcome to MyKidActivity </h1>
 </div>
