--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -20,7 +20,7 @@
 
 
         <li class="nav-item">
-        <%=link_to "MyKid Activities", activities_path, class: "nav-link"%>
+        <%=link_to "MyKid Activities", mykidactivities_path, class: "nav-link"%>
       </li>
 
       <li class="nav-item">
