--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -17,15 +17,22 @@
     
     <div class='container'>
 
-      <%if current_user && current_user.id == @activity.user_id%>
-          <div class='d-flex justify-content-equally'>
-            <%= link_to "Edit", edit_activity_path(@activity.id), class: "btn btn-warning mr-2" %>
-            <%= link_to "Delete", @listing, method: :delete, data: {confirm: "Are you sure?"}, class: "btn btn-danger" %>
+    <%if current_user || @activity.id == false%>
 
-          </div> 
-         
-      <%end%>
-    <%= link_to "Book", bookings_path, class: "btn btn-primary mt-2 mb-4" %>
+      <button class='btn btn-primary mb-3 pr-2' data-stripe="payment">Book:<%=format_price(@activity.price)%> </button>
+    <%else%>
+      <%= link_to "Login To Buy", mykidactivities_path, class: "btn btn-warning mr-2" %>
+  
+    <%end%>  
+        <%if current_user && current_user.id == @activity.user_id%>
+            <div class='d-flex justify-content-equally'>
+              <%= link_to "Edit", edit_activity_path(@activity.id), class: "btn btn-warning mr-2" %>
+              <%= link_to "Delete", @listing, method: :delete, data: {confirm: "Are you sure?"}, class: "btn btn-danger" %>
+
+            </div> 
+        <%end%>
+
+    <!--<%= link_to "Book", bookings_path, class: "btn btn-primary mt-2 mb-4" %>-->
     <%if current_user && current_user.id == @activity.user_id%>
 
     <h3 class='mb-sm-2 mb-md-3'>Registered Players</h3>
@@ -44,6 +51,18 @@
 
 </section>
 
+    <script src="https://js.stripe.com/v3/"></script>
+    <script>
+    document
+      .querySelector("[data-stripe='payment']")
+      .addEventListener("click", () => {
+        const stripe = Stripe("<%=Rails.application.credentials.dig(:stripe, :public_key)%>");
+        console.log(stripe);
+        stripe.redirectToCheckout({
+          sessionId: "<%=@session_id%>"
+        })
+      })
+    </script>
 
 
 
