--- a/app/views/activities/_form.html.erb
+++ b/app/views/activities/_form.html.erb
@@ -1,4 +1,20 @@
 <%=form_with model: @activity, local: true do |f|%>
+
+  <%if @activity.errors.any?%>
+    <div class="alert alert-error alert-dismissable fade show">
+      <h3><%=pluralize(@activity.errors.count, "error")%> prohibited this listing from being saved </h3>
+      <ul>
+        <%@activity.errors.full_messages.each do |message|%>
+          <li><%=message%></li>
+        <%end%>
+      </ul>
+    
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <%end%>
+
   
     <div class='form-group mb-3'> 
       <%=f.label :title, class: "form-label"%>
